# division_engine_core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: CMakeLists.txt  main.c  main.cpp
example/shaders/: test.frag  test.frag.metal  test.vert  test.vert.metal
glfw_internal/: CMakeLists.txt
glfw_internal/include/: glad_restrict.h  glfw_keycode_map.h  glfw_render_pass.h  glfw_shader.h  glfw_texture.h  glfw_uniform_buffer.h  glfw_vertex_buffer.h
glfw_internal/src/: glfw_render_pass.c  glfw_render_pass_descriptor.c  glfw_render_pass_instance.c  glfw_renderer.c  glfw_shader.c  glfw_texture.c  glfw_uniform_buffer.c  glfw_vertex_buffer.c
include/division_engine/: context.h  render_pass.h  shader.h  uniform_buffer.h  vertex_buffer.h
include/division_engine/platform_internal/: platform_render_pass.h  platform_renderer.h  platform_uniform_buffer.h  platform_vertex_buffer.h  platfrom_shader.h
include/division_engine_core/: color.h  context.h  division_lifecycle.h  font.h  input.h  io_utility.h  keycode.h  render_pass.h  render_pass_descriptor.h  render_pass_instance.h  renderer.h  settings.h  shader.h  state.h  texture.h  uniform_buffer.h  utility.h  vertex_buffer.h
include/division_engine_core/data_structures/: hash_table.h  ordered_id_table.h  unordered_id_table.h
include/division_engine_core/types/: color.h  division_lifecycle.h  font.h  id.h  input.h  keycode.h  render_pass_descriptor.h  render_pass_instance.h  settings.h  shader.h  state.h  texture.h  uniform_buffer.h  vertex_buffer.h
include/division_engine_shader_compiler/: interface.h
include/division_id_table/: ordered_id_table.h  unordered_id_table.h
include/division_shader_compiler/: interface.h
include/rendering/: render_pass.h  shader.h  uniform_buffer.h  vertex_buffer.h
include/rendering/platform_internal/: platform_render_pass.h  platform_renderer.h  platform_uniform_buffer.h  platform_vertex_buffer.h  platfrom_shader.h
osx_metal_internal/: CMakeLists.txt
osx_metal_internal/include/: DivisionOSXAppDelegate.h  DivisionOSXViewDelegate.h  osx_keycode_map.h  osx_render_pass.h  osx_shader_context.h  osx_texture.h  osx_uniform_buffer.h  osx_vertex_buffer.h  osx_window_context.h
osx_metal_internal/src/: DivisionOSXAppDelegate.cpp  DivisionOSXAppDelegate.m  DivisionOSXViewDelegate.cpp  DivisionOSXViewDelegate.m  osx_metal_renderer.m  osx_metal_shader.m  osx_metal_texture.m  osx_metal_uniform_buffer.m  osx_metal_vertex_buffer.m  osx_render_pass.m  osx_render_pass_descriptor.m  osx_render_pass_instance.m
platform_internal_include/division_engine_core/platform_internal/: platform_render_pass.h  platform_render_pass_descriptor.h  platform_render_pass_instance.h  platform_renderer.h  platform_texture.h  platform_uniform_buffer.h  platform_vertex_buffer.h  platfrom_shader.h
shader_compiler/: CMakeLists.txt
shader_compiler/src/: interface.cpp
src/: context.c  font.c  hash_table.c  input.c  io_utility.c  ordered_id_table.c  render_pass.c  render_pass_descriptor.c  render_pass_instance.c  renderer.c  shader.c  texture.c  uniform_buffer.c  unordered_id_table.c  vertex_buffer.c
tests/: CMakeLists.txt  division_hash_table_tests.cpp  division_ordered_id_table_tests.cpp  division_unordered_id_table.cpp  division_unordered_id_table_tests.cpp
